# SLang-Codegen-LLVM

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  Makefile  PreLoad.cmake  README.md  app  vcpkg.json
.github/workflows/: build-and-lint.yml  build-lint-test.yml  build.yml
CodeGenerator/: CMakeLists.txt
SLang-LLVM/: CMakeLists.txt  SLang-LLVM.cpp  SLang-LLVM.h  main.cpp
app/: CMakeLists.txt  code_generator.cc  code_generator.cpp
code_generator/: CMakeLists.txt  code_generator_driver.cpp  code_generator_driver.hpp  main.cpp
code_generator_driver/: CMakeLists.txt
command_line_args/: CMakeLists.txt  command_line_args.cpp  command_line_args.hpp
data/: slangir.schema.json
dependencies/license/: cmake_copyright.txt  ninja_copyright.txt
include/: entity_hierarchy.hpp
include/slang_codegen/code_generator_driver/: code_generator_driver.h  code_generator_driver.hpp
include/slang_codegen/command_line_args/: command_line_args.h  command_line_args.hpp
include/slang_codegen_llvm/command_line_args/: command_line_args.h
include/slang_codegen_llvm/driver/: driver.h
ir_converter/: CMakeLists.txt  ir_converter.cpp  ir_converter.hpp
license/: nlohmann_json.txt
object_file_generator/: CMakeLists.txt  object_file_generator.cpp  object_file_generator.hpp
src/: CMakeLists.txt  deserialiser.cpp  deserialiser.hpp  deserializeMapping.data  deserializeMapping.def  deserializer.cpp  deserializer.hpp  entity_hierarchy.cpp  entity_hierarchy.hpp  libc_names.def  llvm_utils.cpp  llvm_utils.hpp  main.cpp  slang-llvm  slang-llvm.sh
src/code_generator_driver/: CMakeLists.txt  code_generator_driver.cc  code_generator_driver.cpp
src/command_line_args/: CMakeLists.txt  command_line_args.cc  command_line_args.cpp
src/driver/: CMakeLists.txt  driver.cc
src/ir_converter/: CMakeLists.txt  ir_converter.cc  ir_converter.cpp  ir_converter.h  ir_converter.hpp  ir_converter.test.cc
src/object_file_generator/: CMakeLists.txt  object_file_generator.cc  object_file_generator.cpp  object_file_generator.h  object_file_generator.hpp
tests/: binary.json  exit.slang  exit.slang.json  function.json  in.json  mandelbrot.slang  vardecl.json
tools/: install_vcpkg.sh
utils/: CMakeLists.txt  command_line_args.cpp  command_line_args.hpp
